fix calendar, self-catering table on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -661,14 +661,10 @@ button a {
 }
 .calendar-container {
     position: relative;
-    /*padding-bottom: 75%;*/
     height: 350px;
     overflow: hidden;
 }
 .calendar-container iframe {
-    position: absolute;
-    top:0;
-    left: 0;
     width: 100%;
     height: 100%;
 }
@@ -691,15 +687,16 @@ ul.bandb li em {
    border: 1px solid #494747;
 }
 .selfcater td, .selfcater th {
-	padding: 5px;
+	/*padding: 5px;*/
 	text-align: center;
+	font-size: 0.8em;
 }
 .selfcater td:nth-of-type(5n+1) {
 	text-align: left;
 }
 .selfcater th {
-	text-transform: uppercase;
-	font-weight: normal;
+	/*text-transform: uppercase;*/
+	font-weight: 300;
 	color: #999;
 }
 /*table {
@@ -1347,6 +1344,15 @@ textarea {
 	.slideshow.glist img {
 		width: 100%;
 	}
+	.selfcater td, .selfcater th {
+		padding: 5px;
+		font-size: 1em;
+	}
+	.selfcater th {
+		text-transform: uppercase;
+		font-weight: 300;
+	}
+
 }
 
 @media (min-width:45em) {
